--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "node-polyfill-webpack-plugin": "^2.0.1",
+    "nprogress": "^0.2.0",
     "path-browserify": "^1.0.1",
     "screenfull": "^6.0.2",
     "vue": "^2.6.14",
