--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "file-saver": "^2.0.5",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "nprogress": "^0.2.0",
     "path-browserify": "^1.0.1",
